--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.6",
+    "@chakra-ui/layout": "^2.1.3",
+    "@chakra-ui/menu": "^2.0.8",
     "@chakra-ui/react": "^2.2.6",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "feather-icons": "^4.29.0",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-favicon": "^1.0.1",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
-    "vite": "^3.0.0"
+    "@vue/babel-plugin-jsx": "^1.1.1",
+    "vite": "^3.0.0",
+    "vite-plugin-favicon": "^1.0.8"
   }
 }
