--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/icons": "^2.0.6",
     "@chakra-ui/layout": "^2.1.3",
     "@chakra-ui/menu": "^2.0.8",
+    "@chakra-ui/modal": "^2.1.6",
     "@chakra-ui/react": "^2.2.6",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
