--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.6",
+    "@chakra-ui/input": "^2.0.8",
     "@chakra-ui/layout": "^2.1.3",
     "@chakra-ui/menu": "^2.0.8",
     "@chakra-ui/modal": "^2.1.6",
