--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@chakra-ui/layout": "^2.1.3",
     "@chakra-ui/menu": "^2.0.8",
     "@chakra-ui/modal": "^2.1.6",
+    "@chakra-ui/pro-theme": "^0.0.53",
     "@chakra-ui/react": "^2.2.6",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "feather-icons": "^4.29.0",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-favicon": "^1.0.1",
     "react-icons": "^4.4.0",
