--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@chakra-ui/react": "^2.2.6",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@gatsbyjs/reach-router": "^1.3.10-no-navigate.4",
     "feather-icons": "^4.29.0",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
