--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@chakra-ui/modal": "^2.1.6",
     "@chakra-ui/pro-theme": "^0.0.53",
     "@chakra-ui/react": "^2.2.6",
+    "@chakra-ui/table": "^2.0.8",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@gatsbyjs/reach-router": "^1.3.10-no-navigate.4",
