--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@gatsbyjs/reach-router": "^1.3.10-no-navigate.4",
+    "dotenv": "^16.0.1",
     "feather-icons": "^4.29.0",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
@@ -27,7 +28,8 @@
     "react-dom": "^18.2.0",
     "react-favicon": "^1.0.1",
     "react-icons": "^4.4.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
@@ -35,6 +37,7 @@
     "@vitejs/plugin-react": "^2.0.0",
     "@vue/babel-plugin-jsx": "^1.1.1",
     "flow-babel-webpack-plugin": "^1.1.1",
+    "react-app-env": "^1.2.3",
     "vite": "^3.0.0",
     "vite-plugin-favicon": "^1.0.8"
   }
