--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@gatsbyjs/reach-router": "^1.3.10-no-navigate.4",
-    "dotenv": "^16.0.1",
     "feather-icons": "^4.29.0",
     "framer-motion": "^6.5.1",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
@@ -37,6 +37,7 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
     "@vue/babel-plugin-jsx": "^1.1.1",
+    "dotenv": "^16.0.3",
     "flow-babel-webpack-plugin": "^1.1.1",
     "react-app-env": "^1.2.3",
     "vite": "^3.0.0",
