--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-favicon": "^1.0.1",
