--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-favicon": "^1.0.1",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.9.0",
     "uuid": "^8.3.2"
