--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@chakra-ui/pro-theme": "^0.0.53",
     "@chakra-ui/react": "^2.2.6",
     "@chakra-ui/table": "^2.0.8",
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.10.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@gatsbyjs/reach-router": "^1.3.10-no-navigate.4",
+    "cloudinary-react": "^1.8.1",
     "feather-icons": "^4.29.0",
     "framer-motion": "^6.5.1",
     "jsonwebtoken": "^9.0.0",
@@ -31,6 +34,7 @@
     "react-favicon": "^1.0.1",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.4.0",
+    "react-input-files": "^1.2.0",
     "react-router-dom": "^6.9.0",
     "uuid": "^8.3.2"
   },
