--- a/package.json
+++ b/package.json
@@ -15,23 +15,27 @@
     "@chakra-ui/menu": "^2.0.8",
     "@chakra-ui/modal": "^2.1.6",
     "@chakra-ui/pro-theme": "^0.0.53",
-    "@chakra-ui/react": "^2.2.6",
+    "@chakra-ui/react": "^2.5.5",
     "@chakra-ui/table": "^2.0.8",
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.10.0",
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@gatsbyjs/reach-router": "^1.3.10-no-navigate.4",
     "cloudinary-react": "^1.8.1",
+    "cloudinary-uploader": "^1.0.2",
     "feather-icons": "^4.29.0",
-    "framer-motion": "^6.5.1",
+    "framer-motion": "^4.1.17",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
+    "material-ui-dropzone": "^3.5.0",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-favicon": "^1.0.1",
+    "react-file-upload": "^0.0.4",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.4.0",
     "react-input-files": "^1.2.0",
