--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/accordion": "^2.1.6",
     "@chakra-ui/icons": "^2.0.6",
     "@chakra-ui/input": "^2.0.8",
     "@chakra-ui/layout": "^2.1.3",
@@ -22,6 +23,8 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@gatsbyjs/reach-router": "^1.3.10-no-navigate.4",
+    "@material-ui/core": "^4.12.4",
+    "axios": "^0.27.2",
     "cloudinary-react": "^1.8.1",
     "cloudinary-uploader": "^1.0.2",
     "feather-icons": "^4.29.0",
