--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dropzone": "^14.2.3",
     "react-favicon": "^1.0.1",
     "react-file-upload": "^0.0.4",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.4.0",
     "react-input-files": "^1.2.0",
